--- a/scratch.html
+++ b/scratch.html
@@ -16,7 +16,7 @@
 </nav>
  
     <div class="common mainbody">
-    <img src = "./img/Jared.Jpg" alt = "Me" width = "300">
+    <img src = "./img/Jared.jpg" alt = "Me" width = "300">
     <ol>
         <H3><li>Education</li></H3>
             <ul>
